--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
     function celebrate() {
         document.querySelector(".container").innerHTML = `
-            <h1 style="color:#ff4d6d;">Yessss! I was so nervous 😭❤️</h1>
-            <img src="https://media.giphy.com/media/3o7aD2saalBwwftBIY/giphy.gif" alt="Relieved celebration GIF">
+            <h1 style="color:#ff4d6d;">Yessss! I was so nervous Bitchhhhh 😭❤️</h1>
+            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExa21kdDh1dHNqbm9hbXp6NjRyaTF3Z3o2cTZ5dDB0ZDc0cDd5eTI1ZiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/3krrjoL0vHRaWqwU3k/giphy.gif" alt="Relieved celebration GIF">
         `;
         startConfetti();
     }
@@ -149,3 +149,4 @@
 
 </body>
 </html>
+
